--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul style="margin-left: 200px;">
-          <li><a href="#hero" class="active"><br></a></li>
+          <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#workers">Skills</a></li>
           <li><a href="#contact">Projects</a></li>
