--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <ul style="margin-left: 200px;">
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#workers">Skills</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Projects</a></li>
           <li><a href="#contact">Experience</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -87,59 +87,64 @@
               <h2 data-aos="fade-up">Hi,</h2>
               <h1>you reached, <span style="color: #ce1212;">Emmanuel</span></h1>
             </div>
-            <p style="margin-left: 50px;padding-top: 50px;font-weight: bolder;">Computer Scientist who aims to evolve Businesses with Tech Solutions</p>
+            <p style="margin-left: 50px;padding-top: 50px;font-weight: bolder;">Computer Scientist who aims to evolve Business with Tech Solutions <br>specialized in creating Imactful solutions for Business and Indivuals.</p>
           </div>
-          <!-- <div class="col-lg-7 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-            <img src="assets/img/nuelbanner2.jpg" class="img-fluid animated" alt="">
-          </div> -->
         </div>
       </div>
-
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About Us<br></h2>
-        <p><span>Learn More</span> <span class="description-title">About Us</span></p>
-      </div><!-- End Section Title -->
+    <section id="about" class="hero section">
 
       <div class="container">
+      <!-- Section Title -->
+      <div class="container">
+        <!-- <h2>About Us<br></h2> -->
+         <div class="about img-fluid animated" style="margin-left: 40px;padding-bottom: 30px;">
+          <h1>About<span style="color: #ce1212;padding-left: 5px;">me</span></h1>
+         </div>
+      </div><!-- End Section Title -->
+
+      <div class="container" style="height: 500px;">
 
         <div class="row gy-4">
-          <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/aboutus.jfif" class="img-fluid mb-4" alt="" style="width: 100%;height: 50%;">
-            <div class="book-a-table">
-                <img src="assets/img/watsup.jfif" alt="" style="width: 50px;height: 50px;"><span style="font-weight: bolder;font-size: larger;">+255 752 910 944</span>
-                <span style="float: right; font-weight: bolder; font-size: larger;color:#d11111;padding-top:10px"><a href="https://wa.me/+255752910944">CALL US NOW</a></span>
-            </div>
-          </div>
           <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
             <div class="content ps-0 ps-lg-5">
-              <p class="fst-italic">
-                At NuelTech, we are dedicated to delivering top-tier technology solutions that drive innovation and efficiency. Our expertise spans across:
+
+              <p style="font-weight: bolder;">
+                Tanzania Software and Hardware Engineer specialized in creating solutions for Business and Individuals
               </p>
-              <ul>
-                <li><i class="bi bi-check-circle-fill"></i><span style="font-weight: bold;font-size: larger;">Web Development:</span><span>  Crafting dynamic, responsive, and user-friendly websites tailored to your business needs.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i><span style="font-weight: bold;font-size: larger;">Cyber Security:</span><span> Protecting your digital assets with advanced security solutions to safeguard against cyber threats.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i><span style="font-weight: bold;font-size: larger;">Mobile App Development:</span><span>  Designing and developing cutting-edge mobile applications for seamless user experiences.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i><span style="font-weight: bold;font-size: larger;">Computer Maintanace:</span><span> Ensuring optimal performance and longevity of your IT infrastructure with expert maintenance and support.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i><span style="font-weight: bold;font-size: larger;">Internet of Things (IoT):</span><span>Connecting smart devices to enhance automation, efficiency, and data-driven decision-making..</span></li>
-              </ul>
-              <p>
-                With a team of skilled professionals, we provide reliable and scalable tech solutions to help businesses thrive in the digital world. Partner with us to take your technology to the next level!
+              <p style="font-weight: bolder;">
+                My Expertise targets web and mobile application Development both frontend and backend software development <br>
+                also am capable of repairing and maintaining computer hardware problem and providing better solution to the hardware problem.
               </p>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/workers/emma_1.png" class="hero img-fluid animated mb-4" alt="" style="width: 100%;height: 50%;">
+            <div class="book-a-table hero img-fluid animated" style="padding: 0%;">
+              <a href="https://wa.me/+255752910944">
+                <img src="assets/img/watsup.jfif" alt="" style="width: 50px;height: 50px;"><span style="font-weight: bolder;font-size: larger;color: #257605;">+255 752 910 944</span>
+                <span style="font-weight: bolder;color: #257605;font-size: large;padding-left: 30px;"><-CALL NOW</span>
+              </a>
+            </div>
+          </div>
+          </div>
 
       </div>
 
     </section><!-- /About Section -->
 
     <!-- Why Us Section -->
-    <section id="why-us" class="why-us section light-background">
+    <section id="skills" class="hero why-us section light-background">
 
       <div class="container">
+        <div class="container">
+          <!-- <h2>About Us<br></h2> -->
+           <div class="about img-fluid animated" style="margin-left: 40px;padding-bottom: 30px;">
+            <h1><span style="color: #ce1212;padding-left: 5px;">Skills</span></h1>
+           </div>
+        </div>
 
         <div class="row gy-4">
 
@@ -205,50 +210,6 @@
       </div>
 
     </section><!-- /Why Us Section -->
-
-    <!-- Stats Section -->
-    <section id="stats" class="stats section dark-background">
-
-      <img src="assets/img/stats3.jfif" alt="" data-aos="fade-in">
-
-      <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Clients</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Workers</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Stats Section -->
-
 
     <!-- Events Section -->
 
