--- a/index.html
+++ b/index.html
@@ -273,19 +273,18 @@
     </section><!-- /Chefs Section -->
 
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
+    <section id="contact" class="hero contact section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p><span>Need Help?</span> <span class="description-title">Contact Us</span></p>
-      </div><!-- End Section Title -->
+        <div class="container">
+          <div class="container">
+            <!-- <h2>About Us<br></h2> -->
+             <div class="about img-fluid animated" style="margin-left: 40px;padding-bottom: 30px;">
+              <h1><span style="color: #ce1212;padding-left: 5px;">CONTACT</span></h1>
+             </div>
+          </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="mb-5">
-          <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8019.783935064841!2d36.7070589030193!3d-3.417732332609666!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x18370500617a0f2d%3A0xd8215719ddce5593!2sTAIRO%20Net%20House!5e0!3m2!1sen!2stz!4v1740732105823!5m2!1sen!2stz" frameborder="0" allowfullscreen=""></iframe>
-        </div><!-- End Google Maps -->
+          <div class="container" style="margin-left: 100px;max-width: 1600px; margin-left: 9%;">
 
         <div class="row gy-4">
 
@@ -294,7 +293,7 @@
               <i class="icon bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>Engutoto, Arusha, Tanzania</p>
+                <p>Ilala, Dar es salaam, Tanzania</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -303,7 +302,7 @@
             <div class="info-item d-flex align-items-center" data-aos="fade-up" data-aos-delay="300">
               <i class="icon bi bi-telephone flex-shrink-0"></i>
               <div>
-                <h3>Call Us</h3>
+                <h3>Call Me</h3>
                 <p>+255 752 910 944</p>
               </div>
             </div>
@@ -331,7 +330,7 @@
 
         </div>
 
-        <form action="./contact.php" method="POST" class="php-email-form">
+        <!-- <form action="./contact.php" method="POST" class="php-email-form">
           <div class="row gy-4">
 
             <div class="col-md-6">
@@ -354,7 +353,7 @@
             </div>
 
           </div>
-        </form><!-- End Contact Form -->
+        </form>End Contact Form -->
 
       </div>
 
@@ -362,61 +361,30 @@
 
   </main>
 
-  <footer id="footer" class="footer dark-background">
-
-    <div class="container">
-      <div class="row gy-3">
-        <div class="col-lg-3 col-md-6 d-flex">
-          <i class="bi bi-geo-alt icon"></i>
-          <div class="address">
-            <h4>Address</h4>
-            <p>Engutoto</p>
-            <p>Arusha, Tanzania</p>
-            <p></p>
+  <center>
+    <footer id="footer" class="footer dark-background">
+  
+      <div class="container">
+        <div class="row gy-3">
+          <div class="col-lg-3 col-md-6 d-flex">
+            <i class="bi bi-geo-alt icon"></i>
+            <div class="address">
+              <h4>Address</h4>
+              <p>Engutoto</p>
+              <p>Arusha, Tanzania</p>
+              <p></p>
+            </div>
           </div>
-
+  
         </div>
-
-        <div class="col-lg-3 col-md-6 d-flex">
-          <i class="bi bi-telephone icon"></i>
-          <div>
-            <h4>Contact</h4>
-            <p>
-              <strong>Phone:</strong> <span>+255 752 910 944</span><br>
-              <strong>Email:</strong> <span>paulsiaga72@gmail.com</span><br>
-            </p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 d-flex">
-          <i class="bi bi-clock icon"></i>
-          <div>
-            <h4>Opening Hours</h4>
-            <p>
-              <strong>Mon-Sat:</strong> <span>08:00 AM - 10:00 PM</span><br>
-              <strong>Sunday</strong>: <span>Closed</span>
-            </p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <h4>Follow Us</h4>
-          <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-
       </div>
-    </div>
-
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">NuelTech</strong> <span>All Rights Reserved</span></p>
-    </div>
-
-  </footer>
+  
+      <div class="container copyright text-center mt-4">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">NuelTech</strong> <span>All Rights Reserved</span></p>
+      </div>
+  
+    </footer>
+  </center>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
