--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
-    <section id="about" class="hero section">
+    <section id="about" class="hero section" style="padding-bottom: 0px;">
 
       <div class="container">
       <!-- Section Title -->
@@ -104,7 +104,7 @@
          </div>
       </div><!-- End Section Title -->
 
-      <div class="container" style="height: 500px;">
+      <div class="container" style="height: 800px;">
 
         <div class="row gy-4">
           <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
@@ -330,61 +330,43 @@
 
         </div>
 
-        <!-- <form action="./contact.php" method="POST" class="php-email-form">
-          <div class="row gy-4">
-
-            <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-            </div>
-
-            <div class="col-md-6 ">
-              <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-            </div>
-
-            <div class="col-md-12">
-              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-            </div>
-
-            <div class="col-md-12">
-              <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-            </div>
-
-              <button type="submit" name="sendsms">Send Message</button>
-            </div>
-
-          </div>
-        </form>End Contact Form -->
-
       </div>
 
     </section><!-- /Contact Section -->
 
   </main>
 
-  <center>
     <footer id="footer" class="footer dark-background">
   
-      <div class="container">
+      <div class="container" style="justify-items: center;">
         <div class="row gy-3">
           <div class="col-lg-3 col-md-6 d-flex">
-            <i class="bi bi-geo-alt icon"></i>
             <div class="address">
-              <h4>Address</h4>
-              <p>Engutoto</p>
-              <p>Arusha, Tanzania</p>
-              <p></p>
+                <h4 style="color: white;font-weight: 900;">
+                  <a href="http://">
+                    <i class="bi bi-linkedin" aria-hidden="true" style="color: white;font-weight: bolder;font-size: 40px;"></i>
+                  </a>
+                </h4>
+              </div>
+
+            <div class="address" style="padding-left: 40px;">
+                <h4 style="color: white;font-weight: 900;">
+                  <a href="http://">
+                    <i class="bi bi-github" aria-hidden="true" style="color: white;font-weight: bolder;font-size: 40px;""></i>
+                  </a>
+                </h4>
             </div>
+          </div>
           </div>
   
         </div>
       </div>
   
-      <div class="container copyright text-center mt-4">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">NuelTech</strong> <span>All Rights Reserved</span></p>
+      <div class="container copyright text-center mt-4" style="font-weight: bolder;font-size: larger;">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">EmmanuelSiaga.</strong></p>
       </div>
   
     </footer>
-  </center>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
