--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           <div class="col-lg-3 col-md-6 d-flex">
             <div class="address">
                 <h4 style="color: white;font-weight: 900;">
-                  <a href="http://">
+                  <a href="https://www.linkedin.com/in/emmanuel-siaga-5b7572249/">
                     <i class="bi bi-linkedin" aria-hidden="true" style="color: white;font-weight: bolder;font-size: 40px;"></i>
                   </a>
                 </h4>
@@ -351,7 +351,7 @@
 
             <div class="address" style="padding-left: 40px;">
                 <h4 style="color: white;font-weight: 900;">
-                  <a href="http://">
+                  <a href="https://github.com/NueL72/">
                     <i class="bi bi-github" aria-hidden="true" style="color: white;font-weight: bolder;font-size: 40px;""></i>
                   </a>
                 </h4>
