--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,6 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-
       <div class="container">
         <div class="row gy-4 justify-content-center justify-content-lg-between">
           <div class="order-2 order-lg-1 d-flex flex-column justify-content-center" >
@@ -341,9 +340,9 @@
       <div class="container" style="justify-items: center;">
         <div class="row gy-3">
           <div class="col-lg-3 col-md-6 d-flex">
-            <div class="address">
-                <h4 style="color: white;font-weight: 900;">
-                  <a href="https://www.linkedin.com/in/emmanuel-siaga-5b7572249/">
+            <div>
+                <h4 style="color: black;font-weight: 900;">
+                  <a href="https://www.linkedin.com/in/emmanuel-siaga-5b7572249/" style="color: black;">
                     <i class="bi bi-linkedin" aria-hidden="true" style="color: white;font-weight: bolder;font-size: 40px;"></i>
                   </a>
                 </h4>
