--- a/index2.html
+++ b/index2.html
@@ -89,7 +89,8 @@
           </div>
         </div>
       </div>
-    </section><!-- /Hero Section -->
+    </section>
+    <!-- /Hero Section -->
 
     <!-- About Section -->
     <section id="about" class="hero section" style="padding-bottom: 0px;">
