--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Website</title>
+  <title>E.p.Siaga</title>
   <link
       href="https://fonts.googleapis.com/css2?family=Nabla&display=swap"
       rel="stylesheet"
