--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
               </svg> github.com/NueL72</p>
             </div>
           </div>
-          <form class="space-y-4">
+          <form action="https://formspree.io/f/xjkyekar" method="POST" class="space-y-4">
             <input type="text" placeholder="Your Name" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;">
             <input type="email" placeholder="Your Email" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;">
             <textarea placeholder="Your Message" rows="4" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;"></textarea>
-            <button class="bg-yellow text-black px-6 py-2 rounded hover:bg-yellow-400 hover:text-black transition-all duration-300" style="border: 1px solid yellow; background-color: yellow;">Send Message</button>
+            <button type="submit" class="bg-yellow text-black px-6 py-2 rounded hover:bg-yellow-400 hover:text-black transition-all duration-300" style="border: 1px solid yellow; background-color: yellow;">Send Message</button>
           </form>
         </div>
     </div>
