--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
               </svg> github.com/NueL72</p>
             </div>
           </div>
-          <form action="https://formspree.io/f/xjkyekar" method="POST" class="space-y-4">
+          <form action="https://formspree.io/f/xgvapweo" method="POST" class="space-y-4">
             <input type="text" placeholder="Your Name" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;">
             <input type="email" placeholder="Your Email" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;">
             <textarea placeholder="Your Message" rows="4" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;"></textarea>
