--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <input type="text" name="name" placeholder="Your Name" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;">
             <input type="email" name="email" placeholder="Your Email" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;">
             <textarea name="message" placeholder="Your Message" rows="4" class="w-full p-2 border border-gray-300 rounded focus:border-yellow-400 focus:outline-none transition-all duration-300" style="border: 1px solid yellow;"></textarea>
-            <button type="submit" class="bg-yellow text-black px-6 py-2 rounded hover:bg-yellow-400 hover:text-black transition-all duration-300" style="border: 1px solid yellow; background-color: yellow;">Send Message</button>
+            <button type="submit" name="submit" class="bg-yellow text-black px-6 py-2 rounded hover:bg-yellow-400 hover:text-black transition-all duration-300" style="border: 1px solid yellow; background-color: yellow;">Send Message</button>
           </form>
         </div>
     </div>
